# ebook-reader

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/controller/: app_delegate.rs  doc_controller.rs  mod.rs  navigator.rs  parser.rs  view.rs
src/helper/: config.rs  functions.rs
src/model/: app_state.rs  book.rs  edit_state.rs  library.rs  mod.rs  ui_view.rs
src/tests/: book.rs  mod.rs  ocr.rs
src/ui/home/: home_page_ui.rs  mod.rs
src/ui/home/widgets/: header.rs  mod.rs
src/view/: book_edit.rs  book_view.rs  contact_detail.rs  contact_edit.rs  library.rs  mod.rs  navigator.rs
src/view/book/: ui.rs
src/view/editor/: ui.rs
src/view/home/: example.rs  ui.rs
