[package]
name = "ebook-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
native-dialog = "0.6.3"
epub = "1.2.3"
html_parser = "0.6.3"
html2text = "0.4.4"

[dependencies.druid]
version = "0.7.0"
features = ["im", "image-all", "svg", "image"]