[package]
name = "ebook-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
native-dialog = "0.6.3"
epub = "1.2.4"
html2text = "0.4.4"
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }
zip = "0.6.3"
zip-extensions = "0.6.1"
tesseract = "0.12.0"
image = "0.23.5"



[dependencies.druid]
git = "https://github.com/linebender/druid"
rev = "fc05e965c85fced8720c655685e02478e0530e94" # update this when upgrading to newer druid
features = ["im", "image-all", "svg", "image"]